14-kubernetes/6_volumes/dep_nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: server
        image: nginx:1.20
        ports:
        - name: static
          containerPort: 8080
        - name: dynamic
          containerPort: 8081
        volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
            readOnly: true
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
            - key: nginx.config
              path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
spec:
  selector:
    app: nginx
  ports:
    - name: static
      protocol: TCP
      port: 8090
      targetPort: static
    - name: dynamic
      protocol: TCP
      port: 8091
      targetPort: dynamic
