14-kubernetes/6_volumes/dynamic.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamic
  template:
    metadata:
      labels:
        app: dynamic
    spec:
      containers:
        - name: server
          image: dynamic:latest
          imagePullPolicy: IfNotPresent
          ports:
          - name: http
            containerPort: 80
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: svc-dynamic
spec:
  selector:
    app: dynamic
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
