14-kubernetes/6_volumes/static.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
        - name: server
          image: static:latest
          imagePullPolicy: IfNotPresent
          ports:
          - name: http
            containerPort: 80
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: svc-static
spec:
  selector:
    app: static
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
