14-kubernetes/6_volumes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sites.test.local
    http:
      paths:
      - path: /static
        pathType: Prefix 
        backend:
          service:
            name: svc-nginx
            port:
              name: static
      - path: /dynamic
        pathType: Prefix 
        backend:
          service:
            name: svc-nginx
            port:
              name: dynamic
